add new project

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                 Industrial Engineering department (Özyeğin University, Istanbul).</p>
             <br>
 
-            <p>I interested in Data Science and it is most exciting. Also, I learn new tools and technologies and I
+            <p>I interested in Data Science and it is most exciting. I would like to get job in this field to improve my
+                knowledge. Also, I learn new tools and technologies and I
                 would like get work experience in this field to improve my abilities.</p>
 
         </div>
         <div>
             <h2>Skills</h2>
-            <ul class="information-list">
-                <li>Python</li>
+            <ul class="information-list" style="width: 100%;">
+                <li>Python (pandas, numPy, matplotlib, seaborn)</li>
+                <li>SQL</li>
                 <li>C#</li>
                 <li>HTML</li>
                 <li>CSS (Bootstrap)</li>
-                <li>SQL</li>
-                <li>PHP</li>
             </ul>
         </div>
     </section>
@@ -82,6 +82,7 @@
             <div class="project-card">
                 <img class="project-image" src="src/images/project1.jpg" alt="Project One Image" />
                 <h3>Guessing of the Number</h3>
+                <br>
                 <p class="sub-text">User find the number, properly. HTML, CSS, JavaScript is used for this project.</p>
                 <br>
                 <hr />
@@ -93,6 +94,7 @@
             <div class="project-card">
                 <img class="project-image" src="src/images/project2.jpg" alt="Project Two Image" />
                 <h3>Data Analysis</h3>
+                <br>
                 <p class="sub-text">This project is classification of fetal health. Analyis of data, visualisation of
                     data and model selection. </p>
                 <hr />
@@ -104,11 +106,22 @@
             <div class="project-card">
                 <img class="project-image" src="src/images/project3.jpg" alt="Project Three Image" />
                 <h3>War Game with OOP</h3>
+                <br>
                 <p class="sub-text">This project is War Game which is user manage the game character and fight the
                     computer's character.</p>
                 <hr />
                 <p class="sub-text"><a class="project-link"
                         href="https://github.com/aslihankalyoncu/OOP_War_Game_Project" target="_blank">View here</a></p>
+            </div>
+            <div class="project-card">
+                <img class="project-image" src="src/images/project4.jpg" alt="Project Four Image" />
+                <h3>Customer Segmentation with Cluster</h3>
+                <p class="sub-text">This project based on customer clustering acccording data that is from grocery
+                    store's data. </p>
+                <hr />
+                <p class="sub-text"><a class="project-link"
+                        href="https://github.com/aslihankalyoncu/Cluster_Analyis_for_Customer_Segmentation"
+                        target="_blank">View here</a></p>
             </div>
 
         </div>
