rewrite the content

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                 Industrial Engineering department (Özyeğin University, Istanbul).</p>
             <br>
 
-            <p>I interested in Data Science and it is most exciting. I would like to get job in this field to improve my
-                knowledge. Also, I learn new tools and technologies and I
-                would like get work experience in this field to improve my abilities.</p>
+            <p>I am learning new things in Data Science field. Also, I work on projects myself to improve my knowledge
+                with data. I would like to get job in this field to improve my
+                knowledge. </p>
+
+            <p>Also, I am self-learner, solution oriented thinking and teamplayer</p>
 
         </div>
         <div>
