--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="hero-area">
             <div class="hero-text">
                 <h1>Aslıhan Kalyoncu</h1>
-                <p>Junior Web Developer</p>
+                <p>Junior Web Developer &</p>
+                <p>Junior Data Scientist</p>
                 <div class="button"><a href="#about-me">About me</a></div>
             </div>
             <div class="socials">
