--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="hero-text">
                 <h1>Aslıhan Kalyoncu</h1>
                 <p>Junior Web Developer &</p>
-                <p>Junior Data Scientist</p>
+                <p>Entry-Level Data Scientist</p>
                 <div class="button"><a href="#about-me">About me</a></div>
             </div>
             <div class="socials">
@@ -75,6 +75,9 @@
                 <li>C#</li>
                 <li>HTML</li>
                 <li>CSS (Bootstrap)</li>
+                <li>Data analysis</li>
+                <li>Data visualization</li>
+                <li>Feature engineering</li>
             </ul>
         </div>
     </section>
